tests/integration/pilot/test_artifacts/pilot-058a94968f114a619ba739812/TestTraffic/gateway/http_redirect_when_vs_port_specify_https/to_b/_test_context/VirtualService-Gateway.1315268106.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: gateway
  namespace: echo-2-98059
spec:
  selector:
    istio: aks-istio-ingressgateway-external
  servers:
  - hosts:
    - '*'
    port:
      name: http
      number: 80
      protocol: HTTP
    tls:
      httpsRedirect: true
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: b.echo-2-98059.svc.cluster.local
  namespace: echo-2-98059
spec:
  gateways:
  - gateway
  hosts:
  - b.echo-2-98059.svc.cluster.local
  http:
  - route:
    - destination:
        host: b.echo-2-98059.svc.cluster.local
        port:
          number: 443
